--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/44167992.js"></script>
+  <!--<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/44167992.js"></script>-->
   <!-- End of HubSpot Embed Code -->
 </head>
 
